--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "start": "node --watch index.js",
     "test:dev": "jest --watch",
     "test:ci": "jest --coverage --ci",
-    "lint": "eslint . -c .eslintrc.yml"
+    "lint": "eslint"
   },
   "author": "",
   "license": "ISC",
@@ -20,7 +20,9 @@
     "mongoose": "^8.10.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.21.0",
     "eslint": "^9.21.0",
+    "globals": "^16.0.0",
     "jest": "^29.7.0",
     "mongodb-memory-server": "^10.1.4",
     "supertest": "^7.0.0"
