--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
     "format": "prettier --write src/"
   },
   "cypress": {
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@cypress/code-coverage": "^3.13.12",
+    "@eslint/js": "^9.21.0",
     "@rushstack/eslint-patch": "^1.10.5",
     "@tsconfig/node-lts": "22.0.1",
     "@types/jsdom": "^21.1.7",
@@ -41,12 +42,14 @@
     "eslint": "^9.21.0",
     "eslint-plugin-cypress": "^4.1.0",
     "eslint-plugin-vue": "^9.32.0",
+    "globals": "^16.0.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^17.1.0",
     "prettier": "^3.5.2",
     "sass": "^1.85.1",
     "start-server-and-test": "^2.0.10",
     "typescript": "~5.7.3",
+    "typescript-eslint": "^8.25.0",
     "vite": "^6.2.0",
     "vite-plugin-istanbul": "^7.0.0",
     "vitest": "^3.0.7",
